--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "npm-run-all2": "^7.0.2",
     "postcss": "^8.5.4",
     "prettier": "3.5.3",
+    "sharp": "^0.34.5",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.8.0",
     "vite": "^6.2.4",
+    "vite-plugin-pwa": "^1.2.0",
     "vite-plugin-vue-devtools": "^7.7.2",
     "vue-tsc": "^2.2.8"
   }
